crates/sui/tests/snapshots/shell_tests__implicits__build.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/implicits/build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that building a package that implicitly depends on `Bridge` can build
bfc move build -p example 2> /dev/null

----- results -----
success: false
exit_code: 1
----- stdout -----
Failed to build Move modules: Failed to resolve dependencies for package 'example'

Caused by:
    0: Parsing manifest for 'Sui'
    1: No such file or directory (os error 2).

----- stderr -----
