crates/sui/tests/snapshots/shell_tests__implicits__test_dev.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/implicits/test_dev.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# checks that testing a package with `--dev` that implicitly depends on `Bridge` works
bfc move test -p example --dev 2> /dev/null

----- results -----
success: false
exit_code: 1
----- stdout -----
Failed to resolve dependencies for package 'example'

Caused by:
    0: Fetching 'BfcSystem'
    1: Failed to reset to latest Git state 'a4786abc9d4d' for package 'BfcSystem', to skip set --skip-fetch-latest-git-deps | Exit status: exit status: 128

----- stderr -----
